# HSsum-aws

./: README.md
src/dynamodb/: README.md  pyproject.toml
src/dynamodb/dynamodb/: __init__.py  main.py
